# pytorch

./: .gitignore
npu_fx_compiler/: concrete_graph.py  dynamo.pbtxt  example.py  fx2tf_converter.py  npu_fx_compiler.py
torch/: __init__.py
torch/_dynamo/: convert_frame.py  symbolic_convert.py
torch/_dynamo/variables/: builder.py
torch/_functorch/: aot_autograd.py
torch/csrc/dynamo/: eval_frame.c
torch/fx/experimental/: symbolic_shapes.py
torch_graph/: CMakeLists.txt  build_and_install  dynamo.pbtxt
torch_graph/cmake/: secure_c.cmake
torch_graph/cmake/aoe/: module.cmake
torch_graph/cmake/graph_engine/: module.cmake
torch_graph/examples/: example.py
torch_graph/npu_fx_compiler/: CMakeLists.txt
torch_graph/npu_fx_compiler/core/: npu_wrapper.cpp
torch_graph/python/: MANIFEST.in  setup.py
torch_graph/python/npu_fx_compiler/: __init__.py  npu_fx_compiler.py
torch_graph/python/npu_fx_compiler/core/: backend.py  concrete_graph.py
torch_graph/python/npu_fx_compiler/ge_concrete_graph/: fx2ge_converter.py  ge_apis.py  ge_graph.py
torch_graph/python/npu_fx_compiler/tf_concrete_graph/: fx2tf_converter.py
torch_graph/tests/: CMakeLists.txt  configure.py
torch_graph/tests/cmake/acl/: module.cmake
torch_graph/tests/cmake/graph_engine/: module.cmake
torch_graph/tests/cmake/pytorch/: module.cmake
torch_graph/tests/st/: CMakeLists.txt  npu_fx_compiler_st.py
torch_graph/tests/stub/hccl/manage/: api.py
torch_graph/tests/stub/include/graph/: graph.h
